--- a/05_Marketplace_algorithm/05_Marketplace_algorithm.Rmd
+++ b/05_Marketplace_algorithm/05_Marketplace_algorithm.Rmd
@@ -18,85 +18,21 @@ If you don’t have a strong reason to provide your own validation dataset, we r
 
 
 
-
 ## A quick introduction to AutoGluon-Tabular
-
-
-
-
-
-## Preparation
-
-
 
 
 ## Load necessary libraries and activate conda environment
 
-
 ```{r}
-library(readr)        # for importing the raw data and saving trainig, validation, test sets to disk 
-library(recipes)      # for preprocessing the data
+library(readr)        # for importing the previously saved and preprocessed data and saving a new training set to disk
 library(dplyr)        # for preprocessing the data
-library(rsample)      # for splitting the data
 library(reticulate)   # for calling the SageMaker Python SDK from R
 library(purrr)        # primarily for parsing the SageMaker responses
 library(pROC)         # for the evaluation of the final model performance
 library(caret)        # for the evaluation of the final model performance
 ```
 
-
-
-```{r message=FALSE}
-hotels <- read_csv('https://tidymodels.org/start/case-study/hotels.csv') %>%   
-  mutate_if(is.character, as.factor)
-
-str(hotels)
-```
-
-```{r warning=FALSE}
-holidays <- c("AllSouls", "AshWednesday", "ChristmasEve", "Easter", 
-              "ChristmasDay", "GoodFriday", "NewYearsDay", "PalmSunday")
-
-hotels_rec <- recipe(children ~ ., data = hotels) %>% 
-  step_date(arrival_date, features = c("dow", "month", "year")) %>%
-  step_holiday(arrival_date, holidays = holidays) %>% 
-  step_rm(arrival_date) %>% 
-  step_zv(all_predictors()) %>% 
-  step_dummy(all_nominal(), -all_outcomes(), one_hot = TRUE) 
-
-hotels_preprocessed <- prep(hotels_rec, training = hotels) %>% 
-  juice() %>% 
-  mutate(
-   children = if_else(children == "children", 1, 0)
-  ) %>% 
-  select(children, everything())
-
-dim(hotels_preprocessed)
-```
-
-```{r}
-set.seed(42)
-splits  <- initial_split(hotels_preprocessed, prop = 0.7, strata = children)
-hotels_training <- training(splits)
-hotels_other  <- testing(splits)
-
-splits  <- initial_split(hotels_other, prop = 0.5, strata = children)
-rm(hotels_other)
-hotels_validation <- training(splits)
-hotels_test <- testing(splits)
-```
-
-
-```{r message=FALSE}
-dir.create("../data")
-
-train_combined <- bind_rows(hotels_training, hotels_validation)
-write_csv(train_combined, "../data/hotels_training_autogluon.csv")
-
-hotels_test$children <- NULL
-write_csv(hotels_test, "../data/hotels_test_with_header_without_dependent.csv")
-```
-
+## Preparation
 
 ```{r}
 use_condaenv("sagemaker-r", required = TRUE)
@@ -104,7 +40,6 @@ use_condaenv("sagemaker-r", required = TRUE)
 sagemaker <- import("sagemaker")
 session <- sagemaker$Session()
 ```
-
 
 ```{r}
 bucket <- session$default_bucket()
@@ -114,25 +49,22 @@ models_path <- paste0("s3://", bucket, "/", project, "/", "models")
 ```
 
 ```{r}
+table_header <- read_csv("../data/table_header.csv") %>% names()
+hotels_training  <- read_csv("../data/hotels_training.csv", col_names = table_header)
+hotels_validation <- read_csv("../data/hotels_validation.csv", col_names = table_header)
+
+training_combined <- bind_rows(hotels_training, hotels_validation)
+rm(training_set, validation_set)
+
+write_csv(training_combined, "../data/hotels_training_autogluon.csv")
+```
+`
+
+```{r}
 s3_uploader <- sagemaker$s3$S3Uploader()
 
 s3_train <- s3_uploader$upload(local_path = "../data/hotels_training_autogluon.csv", 
                                desired_s3_uri = data_path)
-
-s3_test <- s3_uploader$upload(local_path = "../data/hotels_test_with_header_without_dependent.csv", 
-                               desired_s3_uri = data_path)
-```
-
-
-```{r}
-data_path <- paste0(project, "/", "data")
-data_s3_location <- session$list_s3_files(bucket, data_path)
-data_s3_location
-```
-
-```{r}
-s3_train <- paste0("s3://", bucket, "/", "hotels/data/hotels_training_autogluon.csv")
-s3_test <- paste0("s3://", bucket, "/", "hotels/data/hotels_test_with_header_without_dependent.csv")
 ```
 
 
@@ -161,8 +93,9 @@ autogluon_tab_estimator <- sagemaker$AlgorithmEstimator(
 
 ### Step 2 - Define the static hyperparameters
 
-```{r}
+Compared to XGBoost not a lot hyperparameters
 
+```{r}
 fit_args = list(eval_metric = "roc_auc", label = "children", presets = "best_quality")
 
 autogluon_tab_estimator$set_hyperparameters(
@@ -183,7 +116,6 @@ job_name <- paste(project, algo, timestamp, sep = "-")
 s3_input <- sagemaker$inputs$TrainingInput(s3_data = s3_train,
                                      content_type = 'csv')
 
-
 input_data <- list('training' = s3_input)
 ```
 
@@ -198,9 +130,7 @@ autogluon_tab_estimator$fit(inputs = input_data,
 ```
 
 
-
 ```{r}
-
 session$describe_training_job(job_name)[["TrainingJobStatus"]]
 ```
 
@@ -245,6 +175,15 @@ model_location <- session$describe_training_job(job_name)[["ModelArtifacts"]][["
 
 session$create_model_package_from_algorithm(name = "autogluon-package3", description = "ag2", algorithm_arn = "arn:aws:sagemaker:us-east-1:865070037744:algorithm/autogluon-tabular-v3-4-b164f6c99d3e4ca2b6b56e72df06a4f2", model_data = model_location )
 
+session$create_model_package_from_algorithm(
+  name = "late-night-package",
+  description = paste0("Model Package created from training with ", Sys.getenv("AUTOGLUON_TABULAR")),
+  algorithm_arn = Sys.getenv("AUTOGLUON_TABULAR"),
+  model_data = model_location)
+
+model <- sagemaker$ModelPackage(role = role_arn, 
+                                model_package_arn = "arn:aws:sagemaker:us-east-1:198562456021:model-package/late-night-package")
+
 # How to retrieve the model_package_arn via the SageMaker API?
 
 
@@ -254,15 +193,26 @@ model_2 <- sagemaker$ModelPackage(role = role_arn, model_package_arn = "arn:aws:
 ```
 
 
+```{r}
+env_list <- list(
+  SAGEMAKER_PROGRAM = "inference.py",
+  SAGEMAKER_SUBMIT_DIRECTORY = "/opt/ml/model/code", 
+  SAGEMAKER_CONTAINER_LOG_LEVEL = 20L,
+  SAGEMAKER_REGION = region
+)
+```
+
+
 
 ```{r}
 # this call creates the model. Convention: model name = model package name + server time stamp
 
-autogluon_batch_predictor <- model_2$transformer(
+autogluon_batch_predictor <- model$transformer(
   instance_count = 1L, 
   instance_type = "ml.m5.4xlarge", 
-  strategy = "MultiRecord", 
-  max_payload = 1L, 
+  strategy = "MultiRecord",
+  env = env_list,
+  #max_payload = 1L, 
   max_concurrent_transforms = 1L, 
   output_path = predictions_path)
 ```
@@ -271,7 +221,8 @@ autogluon_batch_predictor <- model_2$transformer(
 
 
 ```{r}
-job_name <- "job2"
+job_name <- "hotels-autogluon-tabular-2021-02-27-21-58-38"
+job_name <- paste0(job_name, "-latenightfun2")
 
 # Add job status
 autogluon_batch_predictor$transform(
